Fix links, change input box text size when small, change title gap when close.

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
 
 .header {
     display: flex;
+    gap: 45px;
 }
 
 .title {
